contract, api, docker - need fix